# OpenCV-test

./: .env.cmake  .gitignore  CMakeLists.txt  release.bat
_python/: main.py  vision.py  windowcapture.py
src/: Vision.cpp  Vision.hpp  WindowCapture.cpp  WindowCapture.hpp  main.cpp  pch.h  vec.hpp
